@@ -1,3 +1,7 @@
+2002-09-16  Manuel M T Chakravarty  <chak@AttitudeAdjuster>
+
+	* Makefile (ghci): target to lead all of c2hs into GHCi
+
 2002-09-13  Manuel M T Chakravarty  <chak@AttitudeAdjuster>
 
 	* toplevel/c2hs_config.c: removed the `signed' modifier on
